--- a/src/main/resources/public/app/views/editCurrentGames.html
+++ b/src/main/resources/public/app/views/editCurrentGames.html
@@ -12,52 +12,52 @@
 
                     <div class="col-xs-4">
                         <div class="addMargin">
-                            <select class="form-control" ng-model="currentGames[0]">
-                                <option value="World of Warcraft" ng-show="currentGames[1] !== 'World of Warcraft' && currentGames[2] !== 'World of Warcraft'">World of Warcraft</option>
-                                <option value="League of Legends" ng-show="currentGames[1] !== 'League of Legends' && currentGames[2] !== 'League of Legends'">League of Legends</option>
-                                <option value="CS:GO" ng-show="currentGames[1] !== 'CS:GO' && currentGames[2] !== 'CS:GO'">CS:GO</option>
-                                <option value="HearthStone" ng-show="currentGames[1] !== 'HearthStone' && currentGames[2] !== 'HearthStone'">HearthStone</option>
+                            <select class="form-control" ng-model="currentGames[0].name">
+                                <option value="World of Warcraft" ng-show="currentGames[1].name !== 'World of Warcraft' && currentGames[2].name !== 'World of Warcraft'">World of Warcraft</option>
+                                <option value="League of Legends" ng-show="currentGames[1].name !== 'League of Legends' && currentGames[2].name !== 'League of Legends'">League of Legends</option>
+                                <option value="CS:GO" ng-show="currentGames[1].name !== 'CS:GO' && currentGames[2].name !== 'CS:GO'">CS:GO</option>
+                                <option value="HearthStone" ng-show="currentGames[1].name !== 'HearthStone' && currentGames[2].name !== 'HearthStone'">HearthStone</option>
                             </select>
-                            <div ng-show="currentGames[0] === 'World of Warcraft'">
+                            <div ng-show="currentGames[0].name === 'World of Warcraft'">
                                 <input type="text" class="form-control" ng-model="currentGame[0].warcraftCharacter" placeholder="Character Name">
                                 <input type="text" class="form-control" ng-model="currentGame[0].warcraftRealm" placeholder="Realm">
                             </div>
-                            <div ng-show="currentGames[0] === 'League of Legends'">
+                            <div ng-show="currentGames[0].name === 'League of Legends'">
                                 <input type="text" class="form-control" ng-model="currentGame[0].leagueSummoner" placeholder="Summoner Name">
 
                             </div>
                         </div>
                         <div class="addMargin">
-                            <select class="form-control" ng-model="currentGames[1]">
-                                <option value="World of Warcraft" ng-show="currentGames[0] !== 'World of Warcraft' && currentGames[2] !== 'World of Warcraft'">World of Warcraft</option>
-                                <option value="League of Legends" ng-show="currentGames[0] !== 'League of Legends' && currentGames[2] !== 'League of Legends'">League of Legends</option>
-                                <option value="CS:GO" ng-show="currentGames[0] !== 'CS:GO' && currentGames[2] !== 'CS:GO'">CS:GO</option>
-                                <option value="HearthStone" ng-show="currentGames[0] !== 'HearthStone' && currentGames[2] !== 'HearthStone'">HearthStone</option>
+                            <select class="form-control" ng-model="currentGames[1].name">
+                                <option value="World of Warcraft" ng-show="currentGames[0].name !== 'World of Warcraft' && currentGames[2].name !== 'World of Warcraft'">World of Warcraft</option>
+                                <option value="League of Legends" ng-show="currentGames[0].name !== 'League of Legends' && currentGames[2].name !== 'League of Legends'">League of Legends</option>
+                                <option value="CS:GO" ng-show="currentGames[0].name !== 'CS:GO' && currentGames[2].name !== 'CS:GO'">CS:GO</option>
+                                <option value="HearthStone" ng-show="currentGames[0].name !== 'HearthStone' && currentGames[2].name !== 'HearthStone'">HearthStone</option>
 
                             </select>
-                            <div ng-show="currentGames[1] === 'World of Warcraft'">
+                            <div ng-show="currentGames[1].name === 'World of Warcraft'">
                                 <input type="text" class="form-control" ng-model="currentGame[1].warcraftCharacter" placeholder="Character Name">
                                 <input type="text" class="form-control" ng-model="currentGame[1].warcraftRealm" placeholder="Realm">
                             </div>
-                            <div ng-show="currentGames[1] === 'League of Legends'">
+                            <div ng-show="currentGames[1].name === 'League of Legends'">
                                 <input type="text" class="form-control" ng-model="currentGame[1].leagueSummoner" placeholder="Summoner Name">
 
                             </div>
                         </div>
 
                         <div class=a ddMargin>
-                            <select class="form-control addMargin" ng-model="currentGames[2]">
-                                <option value="World of Warcraft" ng-show="currentGames[0] !== 'World of Warcraft' && currentGames[1] !== 'World of Warcraft'">World of Warcraft</option>
-                                <option value="League of Legends" ng-show="currentGames[0] !== 'League of Legends' && currentGames[1] !== 'League of Legends'">League of Legends</option>
-                                <option value="CS:GO" ng-show="currentGames[1] !== 'CS:GO' && currentGames[0] !== 'CS:GO'">CS:GO</option>
-                                <option value="HearthStone" ng-show="currentGames[1] !== 'HearthStone' && currentGames[0] !== 'HearthStone'">HearthStone</option>
+                            <select class="form-control addMargin" ng-model="currentGames[2].name">
+                                <option value="World of Warcraft" ng-show="currentGames[0].name !== 'World of Warcraft' && currentGames[1].name !== 'World of Warcraft'">World of Warcraft</option>
+                                <option value="League of Legends" ng-show="currentGames[0].name !== 'League of Legends' && currentGames[1].name !== 'League of Legends'">League of Legends</option>
+                                <option value="CS:GO" ng-show="currentGames[1].name !== 'CS:GO' && currentGames[0].name !== 'CS:GO'">CS:GO</option>
+                                <option value="HearthStone" ng-show="currentGames[1].name !== 'HearthStone' && currentGames[0].name !== 'HearthStone'">HearthStone</option>
 
                             </select>
-                            <div ng-show="currentGames[2] === 'World of Warcraft'">
+                            <div ng-show="currentGames[2].name === 'World of Warcraft'">
                                 <input type="text" class="form-control" ng-model="currentGame[2].warcraftCharacter" placeholder="Character Name">
                                 <input type="text" class="form-control" ng-model="currentGame[2].warcraftRealm" placeholder="Realm">
                             </div>
-                            <div ng-show="currentGames[2] === 'League of Legends'">
+                            <div ng-show="currentGames[2].name === 'League of Legends'">
                                 <input type="text" class="form-control" ng-model="currentGame[2].leagueSummoner" placeholder="Summoner Name">
 
                             </div>
