--- a/src/main/resources/public/app/views/editCurrentGames.html
+++ b/src/main/resources/public/app/views/editCurrentGames.html
@@ -19,11 +19,11 @@
                                 <option value="HearthStone" ng-show="currentGames[1].name !== 'HearthStone' && currentGames[2].name !== 'HearthStone'">HearthStone</option>
                             </select>
                             <div ng-show="currentGames[0].name === 'World of Warcraft'">
-                                <input type="text" class="form-control" ng-model="currentGame[0].warcraftCharacter" placeholder="Character Name">
-                                <input type="text" class="form-control" ng-model="currentGame[0].warcraftRealm" placeholder="Realm">
+                                <input type="text" class="form-control" ng-model="currentGames[0].warcraftCharacter" placeholder="Character Name">
+                                <input type="text" class="form-control" ng-model="currentGames[0].warcraftRealm" placeholder="Realm">
                             </div>
                             <div ng-show="currentGames[0].name === 'League of Legends'">
-                                <input type="text" class="form-control" ng-model="currentGame[0].leagueSummoner" placeholder="Summoner Name">
+                                <input type="text" class="form-control" ng-model="currentGames[0].leagueSummoner" placeholder="Summoner Name">
 
                             </div>
                         </div>
@@ -36,11 +36,11 @@
 
                             </select>
                             <div ng-show="currentGames[1].name === 'World of Warcraft'">
-                                <input type="text" class="form-control" ng-model="currentGame[1].warcraftCharacter" placeholder="Character Name">
-                                <input type="text" class="form-control" ng-model="currentGame[1].warcraftRealm" placeholder="Realm">
+                                <input type="text" class="form-control" ng-model="currentGames[1].warcraftCharacter" placeholder="Character Name">
+                                <input type="text" class="form-control" ng-model="currentGames[1].warcraftRealm" placeholder="Realm">
                             </div>
                             <div ng-show="currentGames[1].name === 'League of Legends'">
-                                <input type="text" class="form-control" ng-model="currentGame[1].leagueSummoner" placeholder="Summoner Name">
+                                <input type="text" class="form-control" ng-model="currentGames[1].leagueSummoner" placeholder="Summoner Name">
 
                             </div>
                         </div>
@@ -54,11 +54,11 @@
 
                             </select>
                             <div ng-show="currentGames[2].name === 'World of Warcraft'">
-                                <input type="text" class="form-control" ng-model="currentGame[2].warcraftCharacter" placeholder="Character Name">
-                                <input type="text" class="form-control" ng-model="currentGame[2].warcraftRealm" placeholder="Realm">
+                                <input type="text" class="form-control" ng-model="currentGames[2].warcraftCharacter" placeholder="Character Name">
+                                <input type="text" class="form-control" ng-model="currentGames[2].warcraftRealm" placeholder="Realm">
                             </div>
                             <div ng-show="currentGames[2].name === 'League of Legends'">
-                                <input type="text" class="form-control" ng-model="currentGame[2].leagueSummoner" placeholder="Summoner Name">
+                                <input type="text" class="form-control" ng-model="currentGames[2].leagueSummoner" placeholder="Summoner Name">
 
                             </div>
                         </div>
