News Feed Changes and other changes
Made news feed for LOL and moved some things around

--- a/src/main/resources/public/app/views/instantMessagingLearnMore.html
+++ b/src/main/resources/public/app/views/instantMessagingLearnMore.html
@@ -5,7 +5,7 @@
         <form role="form" name = "myForm" novalidate>
             <link href="styles/styles.css" rel="stylesheet" type="text/css" />
                 <center> 
-                <h2 CLASS="text-primary" id="headTab">About Match Making Feature</h2>
+                <h2 CLASS="text-primary" id="headTab">About Instant Messaging Feature</h2>
                 <hr class="small">
                     <div class="row"> 
                         <p>This is where the instant messaging feature will go.</p>    
