changes for current games

--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -56,7 +56,7 @@
                     <div class="panel panel-default" ng-mouseover="currentGamesEdit = true" ng-mouseleave="currentGamesEdit = false">
                         <div class="panel-heading">Current Games<span class="pull-right" ng-show="currentGamesEdit" ng-click="editCurrentGames()">Edit</span>
                         </div>
-                        <div class="panel-body" ng-repeat="currGame in currentGames"><i style="color:green" class="fa fa-check-square"></i>
+                        <div class="panel-body" ng-repeat="currGame in profile.currentGames"><i style="color:green" class="fa fa-check-square"></i>
                             <a href="{{currGame.gameLinks}}"> {{currGame.name}}</a>
 
                         </div>
