building lol page
framework on lol page, not complete on search functions and retreiving
summoner by name because of 403 error

--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -1,10 +1,15 @@
 <ng-cloak>
 <div class="container-fluid">
     <div class="container">
+        <br>
         <h2>League of Legends</h2>
 
+        <h5>Search for your summoner</h5>
+        <!--temp username creditials variable-->
+        <input type="text" id="summoner" name="summoner" ng-model="credentials.username" class="form-control col-sm-2" placeholder="Summoner Name">
+        <a href="#/summonerPage" class="btn btn-light">Submit</a>
+        <br>
         <h3>Current Free Champs</h3>
-
         <div class="row" ng-repeat="data in champData">
             <div class="col-xs-10">
             <span class="pull-right">
