--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -1,7 +1,10 @@
 <ng-cloak>
     <center>
-        <div
-            align=”center”><img src="images/FinalBanner.png" width="" height="" border="0">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div align=”center”><img src="images/FinalBanner.png" width="" height="" border="0">
         </div>
     </center>
 
