Moved search function to league controller

--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -7,7 +7,7 @@
         <h5>Search for your summoner</h5>
         <!--temp username creditials variable-->
             <input type="text" ng-model="sumName" value="sumName" class="form-control col-sm-2" placeholder="Summoner Name">
-            <a ng-click="search(sumName)" href="#/summonerPage" class="btn btn-light">Submit</a>
+            <a ng-click="search(sumName)"  class="btn btn-light">Submit</a>
         <br>
         <p class="text-danger">{{error}}</p>
         <br>
