--- a/src/main/resources/public/app/views/searchedProfile.html
+++ b/src/main/resources/public/app/views/searchedProfile.html
@@ -35,7 +35,7 @@
                     <!--left col-->
                     <div>
                         <ul class="list-group">
-                            <li class="list-group-item text-muted" contenteditable="false">Profile <a class="pull-right" ng-show="profileEdit" ng-click="editProfile()">Edit</a></li>
+                            
                             <li class="list-group-item text-right"><span class="pull-left"><strong
                             class="">Joined</strong></span> {{ profile.join }}
 
@@ -53,8 +53,8 @@
                         </ul>
                     </div>
 
-                    <div class="panel panel-default" ng-mouseover="currentGamesEdit = true" ng-mouseleave="currentGamesEdit = false">
-                        <div class="panel-heading">Current Games<span class="pull-right" ng-show="currentGamesEdit" ng-click="editCurrentGames()">Edit</span>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Current Games
                         </div>
                         <div class="panel-body" ng-repeat="currGame in profile.currentGames"><i style="color:green" class="fa fa-check-square"></i>
                             <a href="{{currGame.gameLinks}}"> {{currGame.name}}</a>
@@ -89,8 +89,8 @@
                 </div>
                 <!--/col-3-->
                 <div class="col-xs-9 col-sm-9" contenteditable="false" style="">
-                    <div class="panel panel-default" ng-mouseover="aboutEdit = true" ng-mouseleave="aboutEdit = false">
-                        <div class="panel-heading">About {{ profile.userName }}<a class="pull-right" ng-show="aboutEdit" ng-click="editAbout()">Edit</a></div>
+                    <div class="panel panel-default" >
+                        <div class="panel-heading">About {{ profile.userName }}</div>
                         <div class="panel-body">
                             <p>{{ profile.description }}</p>
 
