--- a/src/main/resources/public/app/views/editProfilePic.html
+++ b/src/main/resources/public/app/views/editProfilePic.html
@@ -1,37 +1,29 @@
 <ng-cloak>
     <div class="modal-content">
 
-        <div class="modal-body addMargin">
-
-            <form role="form" name="myForm" ng-submit="realName(credentials)" novalidate>
-                <link href="styles/styles.css" rel="stylesheet" type="text/css" />
-                <h3 CLASS="text-primary" id="headTab">Change Profile Picture!</h3>
-                <br>
-                <div class="div-padding">
-
-
-                    <div class="col-xs-4">
-
-
-                        <input type="text" id="username" name="username" ng-model="" class="addMargin" placeholder="File Path">
-                        <br>
-
-
-
-
-
-
-                        <p class="text-danger">{{error}}</p>
-
-
-
-                    </div>
-
-                </div>
-            </form>
+ <body ng-app="fileUpload" ng-controller="MyCtrl">
+    <form name="myForm">
+        <div>Crop Image and Upload</div>
+        <button ngf-select ng-model="picFile" accept="image/*">
+            Select Picture</button>
+        <div ngf-drop ng-model="picFile" ngf-pattern="image/*"
+             class="cropArea">
+            <img-crop image="picFile  | ngfDataUrl"                 
+            result-image="croppedDataUrl" ng-init="croppedDataUrl=''">
+            </img-crop>
         </div>
-        <div class="modal-footer">
-            <button type="button" ng-click="editRealName()" class="btn btn-dark">Submit</button>
+        <div>
+            <img ng-src="{{croppedDataUrl}}" />
+        </div>
+        <button ng-click="upload(croppedDataUrl)">Submit</button> 
+            
+        <span class="progress" ng-show="progress >= 0">
+          <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+        </span>
+        <span ng-show="result">Upload Successful</span>
+        <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
+    </form>
+</body>
             <button type="button" class="btn btn-default" ng-click="close()">Close</button>
         </div>
     </div>
